--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.13.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-toastify": "^11.0.5"
+    "react-router-dom": "^7.9.5",
+    "react-toastify": "^11.0.5",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
